fixed landing page intro text alignment in IE

--- a/wp-content/themes/paw_ux/sass/style.scss
+++ b/wp-content/themes/paw_ux/sass/style.scss
@@ -358,8 +358,9 @@ a:focus {
 
 	@include bp(desktop) {
 			display: flex;
-			align-items: center;
 			flex-direction: column;
+
+			// align-items: center;
 		}
 
 	.intro-name h2 {
@@ -381,6 +382,8 @@ a:focus {
 			font-size: 1.263rem;
 			padding: 0 5rem;
 			// margin: 0 5rem;
+			// margin-right: 5rem;
+			// margin-left: 5rem;
 		}
 	}
 }
